fix z-index

--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@
     left: 0;
     right: 0;
     background-color: var(--gray);
-    z-index: 21;
+    z-index: 51;
     transition: 0.3s;
     height: fit-content;
     padding: 29px 30px;
@@ -998,7 +998,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(75, 85, 99, 0.5);
-    z-index: 21;
+    z-index: 50;
     transition: 0.3s;
 }
 
